--- a/hw01/Part0_Intro.ipynb
+++ b/hw01/Part0_Intro.ipynb
@@ -18,8 +18,8 @@
     "| #       |              Name |             Id |                     email |\n",
     "|---------|-------------------|----------------|---------------------------|\n",
     "|Student 1| Re'em Kishinevsky | 213057094      | reemk@mail.tau.ac.il      |\n",
-    "|Student 2| Maor Lavi         | 207041146      | yuvalyakir@mail.tau.ac.il |\n",
-    "|Student 3| Yuval Yakir       | 325335461      | maorlavi@mail.tau.ac.il   |"
+    "|Student 2| Maor Lavi         | 207041146      | maorlavi@mail.tau.ac.il   |\n",
+    "|Student 3| Yuval Yakir       | 325335461      | yuvalyakir@mail.tau.ac.il |"
    ]
   },
   {
