--- a/hw02/Part0_Intro.ipynb
+++ b/hw02/Part0_Intro.ipynb
@@ -13,11 +13,11 @@
    "source": [
     "Submitted by:\n",
     "\n",
-    "| #       |              Name |             Id |             email |\n",
-    "|---------|-------------------|----------------|------------------ |\n",
-    "|Student 1|  [your name here] | [your id here] | [your email here] |\n",
-    "|Student 2|  [your name here] | [your id here] | [your email here] |\n",
-    "|Student 3|  [your name here] | [your id here] | [your email here] |"
+    "| #       |               Name |             Id |                      email |\n",
+    "|---------|--------------------|----------------|--------------------------- |\n",
+    "|Student 1|  Re'em Kishinevsky | 213057094      | reemk@mail.tau.ac.il       |\n",
+    "|Student 2|  Maor Lavi         | 207041146      | maorlavi@mail.tau.ac.il    |\n",
+    "|Student 3|  Yuval Yakir       | 325335461      | yuvalyakir@mail.tau.ac.il  |"
    ]
   },
   {
